# hypr-hotspots

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  hyprpm.toml
